# selfhost-dashboard

./: Cargo.toml  README.md  clippy.toml  rust-toolchain
.github/workflows/: rust.yml
e2e_tests/api/: basic.py
e2e_tests/browser/: basic.py
selfhost-dashboard/: Cargo.toml  config_example.toml  config_spec.toml
selfhost-dashboard/src/: io.rs  main.rs  marker.rs  postgres_impl.rs  primitives.rs  slog_impl.rs
selfhost-dashboard/src/app/: mod.rs
selfhost-dashboard/src/user/: mod.rs  types.rs
src/: http_impl.rs  hyper_impl.rs  main.rs  mock_db.rs  mod.rs  newtype_macros.rs  postgres_impl.rs  route.rs  slog_impl.rs
src/app/: mod.rs
src/apps/: mod.rs
src/login/: mod.rs
src/user/: db.rs  types.rs
src/webserver/: mod.rs
static/: dashboard.css  dashboard.js  index.html  login.css  login.html  login.js
test_data/etc/selfhost-dashboard/apps/thunderhub-mainnet/: meta.toml
test_data/etc/selfhost/apps/: thunderhub-mainnet.conf
test_data/usr/lib/selfhost-dashboard/apps/entry_points/thunderhub-mainnet/: open
